--- a/script.html
+++ b/script.html
@@ -53,8 +53,16 @@
 <form action="download_tests" method="get">
 	<input type="submit" value="Download Tests" style="background-color: #555; height: 30px; width: 120px">
 </form>
-
 <hr>
+
+<br><br><br>
+
+<h4>Feel like donating?</h4>
+<p>Servers, domains and time cost money. If you feel like you want to donate, you can.</p>
+<br>
+<p>If however you don't want to, or can't, feel free to continue using the service, I enjoyed making it and I'm not going to judge</p>
+<a href="http://bit.do/compiDonate">Paybox</a><br>
+<img src="./compiDonatePaybox.svg" alt="Paybox" style="width: 100px; height: 100px"/>
 <!-- <script>
 
 const r_li = %s;
