--- a/script.html
+++ b/script.html
@@ -61,8 +61,10 @@
 <p>Servers, domains and time cost money. If you feel like you want to donate, you can.</p>
 <br>
 <p>If however you don't want to, or can't, feel free to continue using the service, I enjoyed making it and I'm not going to judge</p>
-<a href="http://bit.do/compiDonate">Paybox</a><br>
-<img src="./compiDonatePaybox.svg" alt="Paybox" style="width: 100px; height: 100px"/>
+<a href="http://bit.do/compiDonate">Paybox</a><br>\
+<object data="compiDonatePaybox.svg" width="100" height="100"></object>
+<img src="compiDonatePaybox.svg" alt="Paybox">
+<!-- <img src="./compiDonatePaybox.svg" alt="Paybox" style="width: 100px; height: 100px"> -->
 <!-- <script>
 
 const r_li = %s;
