--- a/script.html
+++ b/script.html
@@ -58,12 +58,13 @@
 <br><br><br>
 
 <h4>Feel like donating?</h4>
-<p>Servers, domains and time cost money. If you feel like you want to donate, you can.</p>
-<br>
+<div>Servers, domains and time cost money. If you feel like you want to donate, you can.</div>
 <p>If however you don't want to, or can't, feel free to continue using the service, I enjoyed making it and I'm not going to judge</p>
-<a href="http://bit.do/compiDonate">Paybox</a><br>\
-<object data="compiDonatePaybox.svg" width="100" height="100"></object>
-<img src="compiDonatePaybox.svg" alt="Paybox">
+<a href="http://bit.do/compiDonate">Paybox</a><br>
+<!-- <object data="compiDonatePaybox.svg" width="100px" height="100px"></object><br> -->
+<img src="compiDonatePaybox.png" style="width:20em" alt="Paybox"><br>
+<!-- <img src="http://compi.techniondev.com/compiDonatePaybox.svg" onerror="this.onerror=null; this.src='image.png'"> -->
+
 <!-- <img src="./compiDonatePaybox.svg" alt="Paybox" style="width: 100px; height: 100px"> -->
 <!-- <script>
 
