Add href to QR code

--- a/script.html
+++ b/script.html
@@ -62,7 +62,7 @@
 <p>If however you don't want to, or can't, feel free to continue using the service, I enjoyed making it and I'm not going to judge</p>
 <a href="http://bit.do/compiDonate">Paybox</a><br>
 <!-- <object data="compiDonatePaybox.svg" width="100px" height="100px"></object><br> -->
-<img src="compiDonatePaybox.png" style="width:20em" alt="Paybox"><br>
+<img src="compiDonatePaybox.png" href="http://bit.do/compiDonate" style="width:20em" alt="Paybox"><br>
 <!-- <img src="http://compi.techniondev.com/compiDonatePaybox.svg" onerror="this.onerror=null; this.src='image.png'"> -->
 
 <!-- <img src="./compiDonatePaybox.svg" alt="Paybox" style="width: 100px; height: 100px"> -->
