Fix link in iframe

--- a/script.html
+++ b/script.html
@@ -60,7 +60,7 @@
 <h4>Feel like donating?</h4>
 <div>Servers, domains and time cost money. If you feel like you want to donate, you can.</div>
 <p>If however you don't want to, or can't, feel free to continue using the service, I enjoyed making it and I'm not going to judge</p>
-<a href="http://bit.do/compiDonate">Paybox</a><br>
+<a target="_blank" href="http://bit.do/compiDonate">Paybox</a><br>
 <!-- <object data="compiDonatePaybox.svg" width="100px" height="100px"></object><br> -->
 <img src="compiDonatePaybox.png" href="http://bit.do/compiDonate" style="width:20em" alt="Paybox"><br>
 <!-- <img src="http://compi.techniondev.com/compiDonatePaybox.svg" onerror="this.onerror=null; this.src='image.png'"> -->
