--- a/src/html_page.html
+++ b/src/html_page.html
@@ -52,10 +52,24 @@ button {
 	font-size: 12px;
 }
 
-
+.disable_selection {
+	-webkit-touch-callout: none;
+	/* iOS Safari */
+	-webkit-user-select: none;
+	/* Safari */
+	-khtml-user-select: none;
+	/* Konqueror HTML */
+	-moz-user-select: none;
+	/* Old versions of Firefox */
+	-ms-user-select: none;
+	/* Internet Explorer/Edge */
+	user-select: none;
+	/* Non-prefixed version, currently */
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
 
 a {
-	line-height: 200%;
+	/*line-height: 200%;*/
 	font-size: 20px;
 	font-weight: 600;
 	font-family: 'Gill Sans, Gill Sans MT, Calibri, Trebuchet MS, sans-serif';
@@ -65,19 +79,50 @@ a {
 	letter-spacing: .1em;
 }
 
-.all_link {
-	font-size: .9em;
-	word-wrap: break-all;
-	/*float: left;*/
-}
-
-.all_link_container {
+.dir_item {
 	display: inline;
-	font-family: 'Open Sans';
-	padding: 8px;
-	border: solid 2px;
 }
 
+
+
+.all_link {
+	display: block;
+	white-space: wrap;
+	font-family: "Open Sans", sans-serif;
+	overflow-wrap: anywhere;
+	position: relative;
+	border-radius: 5px;
+}
+
+.dir_item:active .link_name {
+	color: red;
+}
+
+.dir_item:active .all_link, .dir_item:hover .all_link {
+	background-color: #25a2c222;
+}
+
+.link_name {
+	display: inline-block;
+	font-size: .8em;
+	word-wrap: break-all;
+	padding: 8px;
+	left: 50px;
+	position: relative;
+}
+
+.link_icon {
+	display: inline-block;
+	font-size: 2em;
+	left:0%;
+	width: 40px;
+}
+
+
+
+.context_menu {
+	margin-left: 10px;
+}
 
 
 .link {
@@ -97,10 +142,123 @@ a {
 }
 
 
+
+::-webkit-scrollbar-track {
+	background: #222;
+}
+
+::-webkit-scrollbar {
+	width: 7px;
+	height: 7px;
+	opacity: 0.3;
+}
+
+::-webkit-scrollbar:hover {
+	opacity: 0.9;
+}
+
+::-webkit-scrollbar-thumb {
+	background: #333;
+	border-radius: 10px;
+}
+
+:hover::-webkit-scrollbar-thumb {
+	background: #666;
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background: #aaa;
+}
+
+
+
 #dir-tree {
 	word-wrap: break-word;
-	max-width: 95vw;
+	max-width: 98vw;
+	border: #075baf 2px solid;
+	border-radius: 5px;
+	background-color: #0d29379f;
+	padding: 0 5px;
+	height: 45px;
 }
+
+.dir_turns {
+	padding: 4px;
+	border-radius: 5px;
+	font-size: .6em;
+
+}
+
+.dir_turns:hover {
+	background-color: #90cdeb82;
+	color: #ffffff;
+}
+
+
+
+#drag-file-list {
+	width: 98%;
+	max-height: 300px;
+	overflow: auto;
+	padding: 20px 0;
+	align-items: center;
+}
+
+.upload-file-item {
+  display: block;
+  border: 1px solid #ddd;
+  margin-top: -1px; /* Prevent double borders */
+  background-color: #f6f6f6;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px;
+  color: black;
+  position: relative;
+  border-radius: 5px;
+  
+  max-width: 100%;
+}
+
+.file-size, .link_size {
+	font-size: .6em;
+	background-color: #19a6c979;
+	padding: 2px;
+	display: inline-block;
+	color: #fff;
+	bo
+	line-height: auto;
+	
+}
+
+.file-size, .file-remove, .link_icon {
+	border-radius: 4px;
+	white-space: nowrap;
+	
+	position: absolute;
+  top: 50%;
+  transform: translate(0%, -50%);
+}
+
+
+
+.file-name, .link_name {
+	display: inline-block;
+	word-wrap: break-all;
+	width: 70%;
+}
+
+.link_name {
+	width: calc(100% - 57px);
+}
+
+.file-remove {
+  padding: 12px 16px;
+  cursor: pointer;
+  font-size: 23px;
+  right: 0%;
+
+}
+
 
 #footer {
 	position: absolute;
@@ -255,9 +413,81 @@ a {
 
 ul{
 	list-style-type: none; /* Remove bullets */
-  padding-left: 5px;
-  margin: 0; 
+	padding-left: 5px;
+	margin: 0; 
 }
+
+#upload-pass {
+	background-color: #000;
+	padding: 5px;
+	border-radius: 4px;
+	font: 1.5em sans-serif;
+}
+
+#upload-pass-box {
+	/* make text field larger */
+	font-size: 1.5em;
+	border: #aa00ff solid 2px;;
+	border-radius: 4px;
+	background-color: #0f0f0f;
+}
+
+
+#upload-box {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.drag-area{
+	border: 2px dashed #fff;
+	height: 300px;
+	width: 95%;
+	border-radius: 5px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+}
+.drag-area.active{
+	border: 2px solid #fff;
+}
+.drag-area .drag-icon{
+	font-size: 100px;
+	color: #fff;
+}
+.drag-area header{
+	font-size: 25px;
+	font-weight: 500;
+	color: #fff;
+}
+.drag-area span{
+	font-size: 20px;
+	font-weight: 500;
+	color: #fff;
+	margin: 10px 0 15px 0;
+}
+.drag-area button, #submit-btn{
+	padding: 10px 25px;
+	font-size: 20px;
+	font-weight: 500;
+	outline: none;
+	background: #fff;
+	color: #5256ad;
+	border-radius: 5px;
+	border: solid 2px #00ccff;
+	cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
+
+
 </style>
 
 <noscript>
