trim size, patch minor typo

--- a/src/html_script.html
+++ b/src/html_script.html
@@ -15,61 +15,72 @@
 	
 	
 	<center>
-	<h1><u>Upload file</u></h1> 
- 
- 
-	<input type="hidden" name="post-type" value="upload">
-	<input type="hidden" name="post-uid" value="12345">
-	
-<span id="upload-pass">Upload PassWord:</span>&nbsp;&nbsp;<input name="password" type="text" label="Password" id="upload-pass-box">
-	<br><br>
-	<!-- <p>Load File:&nbsp;&nbsp;</p><input name="file" type="file" multiple /><br><br> -->
-	<div id="upload-box">
-	<div class="drag-area">
-		<div class="drag-icon">⬆️</div>
-		<header>Drag & Drop to Upload File</header>
-		<span>OR</span>
-		<button id="drag-browse">Browse File</button>
-		<input type="file" name="file" multiple hidden>
-	</div>
+		<h1><u>Upload file</u></h1>
+		
+		
+		<input type="hidden" name="post-type" value="upload">
+		<input type="hidden" name="post-uid" value="12345">
+		
+		<span id="upload-pass">Upload PassWord:</span>&nbsp;&nbsp;<input name="password" type="text" label="Password" id="upload-pass-box">
+		<br><br>
+		<!-- <p>Load File:&nbsp;&nbsp;</p><input name="file" type="file" multiple /><br><br> -->
+		<div id="upload-box">
+			<div class="drag-area">
+				<div class="drag-icon">⬆️</div>
+				<header>Drag & Drop to Upload File</header>
+				<span>OR</span>
+				<button id="drag-browse">Browse File</button>
+				<input type="file" name="file" multiple hidden>
+			</div>
 	</div>
 	
 	
 	<h2 id="has-selected-up" style="display:none">Selected Files</h2>
-	</center>
-	<div id="drag-file-list">
+</center>
+<div id="drag-file-list">
 	<!--// List of file-->
-	</div>
-	
-	<center><input id="submit-btn" type="submit" value="&#10174; upload"></center>
+</div>
+
+<center><input id="submit-btn" type="submit" value="&#10174; upload"></center>
 </form>
 
 
 
 <br>
 <center><div id="upload-task" style="display:none;font-size:20px;font-weight:700">
-<p id="upload-status"></p>
-<progress id="upload-progress" value="0" max="100" style="width:300px"> </progress>
+	<p id="upload-status"></p>
+	<progress id="upload-progress" value="0" max="100" style="width:300px"> </progress>
 </div></center>
 <hr>
 
 <script>
+const log = console.log,
+	byId = document.getElementById.bind(document),
+	byClass = document.getElementsByClassName.bind(document),
+	byTag = document.getElementsByTagName.bind(document),
+	byName = document.getElementsByName.bind(document),
+	createElement = document.createElement.bind(document);
 
+
+String.prototype.toHtmlEntities = function() {
+	return this.replace(/./ugm, s => s.match(/[a-z0-9\s]+/i) ? s : "&#" + s.codePointAt(0) + ";");
+};
+	
 const r_li = ${PY_LINK_LIST};
 const f_li = ${PY_FILE_LIST};
 const s_li = ${PY_FILE_SIZE};
 
-document.getElementById("uploader").addEventListener('submit', e => {
+byId("uploader").addEventListener('submit', e => {
 	e.preventDefault()
 	const formData = new FormData(e.target)
 
 
-	const status = document.getElementById("upload-status")
-	const progress = document.getElementById("upload-progress")
-	
+	const status = byId("upload-status")
+	const progress = byId("upload-progress")
+
 	var prog = 0;
 	var msg = "";
-	
+
 	// const filenames = formData.getAll('files').map(v => v.name).join(', ')
 	const request = new XMLHttpRequest()
 	request.open(e.target.method, e.target.action)
@@ -94,18 +105,9 @@ document.getElementById("uploader").addEventListener('submit', e => {
 
 	}
 	status.innerText = `Uploading : 0%`
-	document.getElementById('upload-task').style.display = 'block'
+	byId('upload-task').style.display = 'block'
 	request.send(formData)
 })
-const log = console.log,
-	byId = document.getElementById.bind(document),
-	byClass = document.getElementsByClassName.bind(document),
-	byTag = document.getElementsByTagName.bind(document),
-	byName = document.getElementsByName.bind(document),
-	createElement = document.createElement.bind(document);
-String.prototype.toHtmlEntities = function() {
-	return this.replace(/./ugm, s => s.match(/[a-z0-9\s]+/i) ? s : "&#" + s.codePointAt(0) + ";");
-};
 
 function null_func() {
 	return true
@@ -203,13 +205,13 @@ class Tools {
 		}
 	}
 	download(dataurl, filename = null) {
-		const link = document.createElement("a");
+		const link = createElement("a");
 		link.href = dataurl;
 		link.download = filename;
 		link.click();
 	}
-	
-	
+
+
 	copy_2(ev, textToCopy) {
 		// navigator clipboard api needs a secure context (https)
 		if (navigator.clipboard && window.isSecureContext) {
@@ -217,7 +219,7 @@ class Tools {
 			return navigator.clipboard.writeText(textToCopy);
 		} else {
 			// text area method
-			let textArea = document.createElement("textarea");
+			let textArea = createElement("textarea");
 			textArea.value = textToCopy;
 			// make the textarea out of viewport
 			textArea.style.position = "fixed";
@@ -365,7 +367,7 @@ class ContextMenu {
 	menu_click(action, link, more_data = null) {
 		var that = this
 		popup_msg.close()
-		
+
 		var url = ".";
 		var xhr = new XMLHttpRequest();
 		xhr.open("POST", url);
@@ -401,7 +403,7 @@ class ContextMenu {
 	show_menus(file, name, type) {
 		var that = this;
 		var menu = createElement("div")
-		
+
 		var new_tab = createElement("div")
 			new_tab.innerHTML = "↗️".toHtmlEntities() + " New tab"
 			new_tab.classList.add("menu_options")
@@ -432,18 +434,18 @@ class ContextMenu {
 			}
 			menu.appendChild(dl_zip)
 		}
-		
+
 		var copy = createElement("div")
 		copy.innerHTML = "⧉".toHtmlEntities() + " Copy link"
 		copy.classList.add("menu_options")
 		copy.onclick = function(ev) {
 			popup_msg.close()
-			let fake_a = document.createElement("a")
+			let fake_a = createElement("a")
 			fake_a.href = file;
 			tools.copy_2(ev, fake_a.href)
 		}
 		menu.appendChild(copy)
-		
+
 		var rename = createElement("div")
 		rename.innerHTML = "✏️".toHtmlEntities() + " Rename"
 		rename.classList.add("menu_options")
@@ -501,7 +503,7 @@ class ContextMenu {
 		popup_msg.open_popup()
 	}
 	create_folder() {
-		let folder_name = document.getElementById('folder-name').value;
+		let folder_name = byId('folder-name').value;
 		this.menu_click('new folder', folder_name)
 	}
 }
@@ -550,8 +552,8 @@ function insertAfter(newNode, existingNode) {
 
 
 tools.del_child("linkss");
-const folder_li = document.createElement('div');
-const file_li = document.createElement("div")
+const folder_li = createElement('div');
+const file_li = createElement("div")
 for (let i = 0; i < r_li.length; i++) {
 	// time to customize the links according to their formats
 	var folder = false
@@ -559,23 +561,23 @@ for (let i = 0; i < r_li.length; i++) {
 	let r = r_li[i];
 	let r_ = r.slice(1);
 	let name = f_li[i];
-	
-	let item = document.createElement('div'); 
+
+	let item = createElement('div');
 	item.classList.add("dir_item")
-	
-	
-	let link = document.createElement('a');// both icon and title, display:flex
+
+
+	let link = createElement('a');// both icon and title, display:flex
 	link.href = r_;
 	link.classList.add('all_link');
 	link.classList.add("disable_selection")
-	let l_icon = document.createElement("span")
+	let l_icon = createElement("span")
 	// this will go inside "link" 1st
 	l_icon.classList.add("link_icon")
-	
-	let l_box = document.createElement("span")
+
+	let l_box = createElement("span")
 	// this will go inside "link" 2nd
 	l_box.classList.add("link_name")
-	
+
 
 	if (r.startsWith('d')) {
 		// add DOWNLOAD FOLDER OPTION in it
@@ -612,30 +614,27 @@ for (let i = 0; i < r_li.length; i++) {
 	}
 
 	link.appendChild(l_icon)
-	
+
 	l_box.innerText = " " + name;
-	
+
 	if(s_li[i]){
-		l_box.appendChild(document.createElement("br"))
-		console.log(s_li[i])
-		let s = document.createElement("span")
+		l_box.appendChild(createElement("br"))
+
+		let s = createElement("span")
 		s.className= "link_size"
 		s.innerText = s_li[i]
 		l_box.appendChild(s)
 	}
 	link.appendChild(l_box)
-	
-	// var context = createElement('span');
-	// context.className = "pagination context_menu"
-	// context.innerHTML = '<b>&nbsp;&vellip;&nbsp;</b>';
 
+	
 	link.oncontextmenu = function(ev) {
 		ev.preventDefault()
 		log(r_, 1);
 		context_menu.show_menus(r_, name, type);
 		return false;
 	}
-	
+
 	item.appendChild(link);
 	//item.appendChild(context);
 	// recycling option for the files and folder
@@ -644,8 +643,8 @@ for (let i = 0; i < r_li.length; i++) {
 	if (r.startsWith('d')) {
 		xxx = "D";
 	}
-	
-	
+
+
 	var hrr = createElement("hr")
 	item.appendChild(hrr);
 	if (folder) {
@@ -654,7 +653,7 @@ for (let i = 0; i < r_li.length; i++) {
 		file_li.appendChild(item)
 	}
 }
-var dir_container = document.getElementById("content_list")
+var dir_container = byId("content_list")
 dir_container.appendChild(folder_li)
 dir_container.appendChild(file_li)
 var dir_tree = byId("dir-tree");
@@ -668,13 +667,13 @@ dir_tree.scrollLeft = dir_tree.scrollWidth;
 
 <script>
 //selecting all required elements
-var uploader = document.getElementById("uploader");
+var uploader = byId("uploader");
 const dropArea = document.querySelector(".drag-area"),
 dragText = dropArea.querySelector("header"),
 button = dropArea.querySelector("button"),
 input = dropArea.querySelector("input");
 let files; //this is a global variable and we'll use it inside multiple functions
-file_display = document.getElementById("drag-file-list");
+file_display = byId("drag-file-list");
 
 button.onclick = (e)=>{
 	e.preventDefault();
@@ -713,7 +712,7 @@ dropArea.addEventListener("drop", (event)=>{
 function removeFileFromFileList(index) {
 	const formData = new FormData(uploader)
 	const dt = new DataTransfer()
-	// const input = document.getElementById('files')
+	// const input = byId('files')
 	// const { files } = input
 
 	for (let i = 0; i < files.length; i++) {
@@ -721,7 +720,7 @@ function removeFileFromFileList(index) {
 	if (index !== i)
 		dt.items.add(file) // here you exclude the file. thus removing it.
 	}
-	
+
 	files = dt.files
 	input.files = dt.files // Assign the updates list
 	showFiles()
@@ -729,7 +728,7 @@ function removeFileFromFileList(index) {
 
 function showFiles() {
 	tools.del_child(file_display)
-	let heading = document.getElementById("has-selected-up")
+	let heading = byId("has-selected-up")
 	if(files.length){
 		heading.style.display = "block"
 	} else {
@@ -741,11 +740,10 @@ function showFiles() {
 }
 
 function showFile(file, index){
-	// console.log(file.name)
 	let filename = file.name;
 	let size = file.size;
 
-	let item = document.createElement("div");
+	let item = createElement("div");
 	item.className = "upload-file-item";
 	item.innerHTML = `
 			<span class="file-name">${filename}</span>
@@ -756,24 +754,6 @@ function showFile(file, index){
 
 	file_display.appendChild(item);
 
-
-
-	// let fileType = file.type; //getting selected file type
-	// let validExtensions = ["image/jpeg", "image/jpg", "image/png"]; //adding some valid image extensions in array
-	// if(validExtensions.includes(fileType)){ //if user selected file is an image file
-		// let fileReader = new FileReader(); //creating new FileReader object
-		// fileReader.onload = ()=>{
-			// let fileURL = fileReader.result; //passing user file source in fileURL variable
-				// UNCOMMENT THIS BELOW LINE. I GOT AN ERROR WHILE UPLOADING THIS POST SO I COMMENTED IT
-			// let imgTag = `<img src="${fileURL}" alt="image">`; //creating an img tag and passing user selected file source inside src attribute
-			// dropArea.innerHTML = imgTag; //adding that created img tag inside dropArea container
-		// }
-		// fileReader.readAsDataURL(file);
-	// }else{
-		// alert("This is not an Image File!");
-		// dropArea.classList.remove("active");
-		// dragText.textContent = "Drag & Drop to Upload File";
-	// }
 }
 
 
