--- a/src/html_page.html
+++ b/src/html_page.html
@@ -36,6 +36,7 @@ button {
 
 * {
 	scrollbar-color: #0f0f0f #454a4d;
+	font-family: "Open Sans", sans-serif;
 }
 
 
@@ -72,7 +73,6 @@ a {
 	/*line-height: 200%;*/
 	font-size: 20px;
 	font-weight: 600;
-	font-family: 'Gill Sans, Gill Sans MT, Calibri, Trebuchet MS, sans-serif';
 	text-decoration: none;
 	color: #00BFFF;
 
@@ -88,7 +88,6 @@ a {
 .all_link {
 	display: block;
 	white-space: wrap;
-	font-family: "Open Sans", sans-serif;
 	overflow-wrap: anywhere;
 	position: relative;
 	border-radius: 5px;
@@ -136,9 +135,7 @@ a {
 }
 
 .file {
-	/* font-weight: 300; */
 	color: #c07cf7;
-	/* font-weight: 400; */
 }
 
 
@@ -215,28 +212,27 @@ a {
   color: black;
   position: relative;
   border-radius: 5px;
-  
+
   max-width: 100%;
 }
 
 .file-size, .link_size {
 	font-size: .6em;
+	font-weight: 600;
 	background-color: #19a6c979;
-	padding: 2px;
+	padding: 3px;
 	display: inline-block;
 	color: #fff;
-	bo
-	line-height: auto;
-	
+	border-radius: 4px;
+
 }
 
 .file-size, .file-remove, .link_icon {
-	border-radius: 4px;
 	white-space: nowrap;
-	
+
 	position: absolute;
-  top: 50%;
-  transform: translate(0%, -50%);
+	top: 50%;
+	transform: translate(0%, -50%);
 }
 
 
@@ -255,6 +251,10 @@ a {
   padding: 12px 16px;
   cursor: pointer;
   font-size: 23px;
+  color: #fff;
+  background-color: #505050;
+  border-radius: 5px;
+  font-weight: 900;
   right: 0%;
 
 }
@@ -316,7 +316,6 @@ a {
 	z-index: 23;
 	padding: 20px;
 	box-sizing: border-box;
-	font-family: "Open Sans", sans-serif;
 	max-height: min(600px, 80%);
 	height: max-content;
 	min-height: 300px;
@@ -414,7 +413,7 @@ a {
 ul{
 	list-style-type: none; /* Remove bullets */
 	padding-left: 5px;
-	margin: 0; 
+	margin: 0;
 }
 
 #upload-pass {
